# sesh

./: .gitignore  README.md  main.py  pyproject.toml
migrations/: 20250815163316_initial_schema.sql
src/sesh/: __main__.py  cli.py  current.py  error.py  store.py  tag.py
src/sesh/command/: reset.py  start.py  status.py  stop.py
src/sesh/command_utils/: start.py  status.py  stop.py
src/sesh/parser/: basic.py  tag.py
tests/: test_tag.py
